# DALI-jpeg2dct

./: CMakeLists.txt  LICENSE  README.md  jpeg2dct.cc  jpeg2dct.h  test_op.py
